k8s/part7/50-order-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-order-worker
  namespace: devops-test
spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app: ticket-order-worker

  template:
    metadata:
      labels:
        app: ticket-order-worker
    spec:
      imagePullSecrets:
        - name: harbor-secret

      containers:
        - name: order-worker
          image: 10.10.10.20:8858/devops-test/ticket-order-worker:part7-v1
          imagePullPolicy: Always

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
