k8s/part7/60-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-frontend
  namespace: devops-test
spec:
  selector:
    app: ticket-frontend
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-frontend
  namespace: devops-test
spec:
  replicas: 2
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app: ticket-frontend

  template:
    metadata:
      labels:
        app: ticket-frontend
    spec:
      imagePullSecrets:
        - name: harbor-secret

      containers:
        - name: frontend
          image: 10.10.10.20:8858/devops-test/ticket-frontend:part7-v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80

          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 20

          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
